--- a/WebAPI/appsettings.json
+++ b/WebAPI/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "TokenOptions": {
+    "Audience": "aziz@aziz.com",
+    "Issuer": "aziz@aziz.com",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysecuritykeymysecuritykey"
+  },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
